--- a/public/css/client_appointment.css
+++ b/public/css/client_appointment.css
@@ -343,8 +343,8 @@
     }
 
     .date-arrow-btn-new {
-        /*width: 40px;*/
-        height: 40px;
+        width: 50px;
+        height: 30px;
         font-size: 16px;
     }
 }
