--- a/templates/client/appointment.html.twig
+++ b/templates/client/appointment.html.twig
@@ -22,7 +22,7 @@
     <!--? Appointment Booking Section Start -->
     <section class="appointment-booking-section section-padding30">
         <div class="container">
-            {% if user.email %}
+            {% if user or isGuest %}
                 <div class="row justify-content-center">
                     <div class="col-xl-11 col-lg-12">
                         <!-- Section Title -->
@@ -42,6 +42,69 @@
                             <input type="hidden" name="procedures" id="selected_procedure_id" value=""/>
                             <input type="hidden" name="appointment_start" id="selected_appointment_date" value="{{ today }}"/>
                             <input type="hidden" name="pickedHours" id="pickedHours" value=""/>
+
+                            {% if isGuest %}
+                                <!-- Guest Contact Information -->
+                                <div class="row mb-50">
+                                    <div class="col-12">
+                                        <div class="guest-info-section">
+                                            <h4 class="form-section-title text-center mb-30">
+                                                <i class="fas fa-user"></i> Вашите данни за контакт
+                                            </h4>
+                                            <div class="row">
+                                                <div class="col-md-6 mb-20">
+                                                    <label for="guest_first_name" class="form-label">Име *</label>
+                                                    <input type="text"
+                                                           class="form-control"
+                                                           id="guest_first_name"
+                                                           name="guest_first_name"
+                                                           required
+                                                           placeholder="Въведете вашето име">
+                                                </div>
+                                                <div class="col-md-6 mb-20">
+                                                    <label for="guest_last_name" class="form-label">Фамилия *</label>
+                                                    <input type="text"
+                                                           class="form-control"
+                                                           id="guest_last_name"
+                                                           name="guest_last_name"
+                                                           required
+                                                           placeholder="Въведете вашата фамилия">
+                                                </div>
+                                                <div class="col-md-6 mb-20">
+                                                    <label for="guest_email" class="form-label">Имейл *</label>
+                                                    <input type="email"
+                                                           class="form-control"
+                                                           id="guest_email"
+                                                           name="guest_email"
+                                                           required
+                                                           placeholder="your@email.com">
+                                                </div>
+                                                <div class="col-md-6 mb-20">
+                                                    <label for="guest_phone" class="form-label">Телефон *</label>
+                                                    <input type="tel"
+                                                           class="form-control"
+                                                           id="guest_phone"
+                                                           name="guest_phone"
+                                                           required
+                                                           placeholder="+359 888 123 456">
+                                                </div>
+                                                <div class="col-12">
+                                                    <div class="form-check">
+                                                        <input type="checkbox"
+                                                               class="form-check-input"
+                                                               id="gdpr_consent"
+                                                               name="gdpr_consent"
+                                                               required>
+                                                        <label class="form-check-label" for="gdpr_consent">
+                                                            Съгласен съм с обработката на личните ми данни съгласно <a href="#" target="_blank">Privacy Policy</a> *
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
 
                             <div class="row">
                                 <!-- Procedure Selection -->
@@ -150,7 +213,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% if user.email %}
+    {% if user or isGuest %}
         <script src="{{ asset('js/client_appointment.js') }}"></script>
         <script>
             // Initialize appointment form with server data
